--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -39,15 +39,19 @@
   <ItemGroup>
     <Compile Include="AEStudyNote.cs" />
     <Compile Include="Building_AEBed.cs" />
-    <Compile Include="CompAEStudyUnlocks.cs" />
-    <Compile Include="CompProperties_AnomalyHospitalBed.cs" />
-    <Compile Include="CompProperties_AnomalyBed.cs" />
-    <Compile Include="CompStudiableAE.cs" />
-    <Compile Include="Comp_AnomalyHospitalBed.cs" />
-    <Compile Include="Comp_AnomalyBed.cs" />
+    <Compile Include="CompProperties\CompProperties_UseEffectReplaceHediff.cs" />
+    <Compile Include="Comp\CompAEStudyUnlocks.cs" />
+    <Compile Include="CompProperties\CompProperties_AnomalyHospitalBed.cs" />
+    <Compile Include="CompProperties\CompProperties_AnomalyBed.cs" />
+    <Compile Include="Comp\CompStudiableAE.cs" />
+    <Compile Include="Comp\Comp_ForbiddenFruit.cs" />
+    <Compile Include="Comp\Comp_AnomalyHospitalBed.cs" />
+    <Compile Include="Comp\Comp_AnomalyBed.cs" />
     <Compile Include="HediffDefOfLocal.cs" />
     <Compile Include="IncidentDefExtension.cs" />
+    <Compile Include="IncidentWorker_DeployThingFromOrbit.cs" />
     <Compile Include="IncidentWorker_DeployFromOrbit.cs" />
+    <Compile Include="Comp\CompUseEffect_ReplaceHediff.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref">
