Meat grinder will call pawn via job to be consumed Interval of call depends on mood Sounds and effects for consumption and butcher Messages after consumption Dev gizmo

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -54,6 +54,7 @@
     <Compile Include="DefOfLocal\ThingCategoryDefOfLocal.cs" />
     <Compile Include="DefOfLocal\SpecialThingFilterDefOfLocal.cs" />
     <Compile Include="IncidentDefExtension.cs" />
+    <Compile Include="JobDriver_CalledMeatGrinder.cs" />
     <Compile Include="IncidentWorker_DeployThingFromOrbit.cs" />
     <Compile Include="IncidentWorker_DeployFromOrbit.cs" />
     <Compile Include="Comp\CompUseEffect_ReplaceHediff.cs" />
