--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -41,11 +41,13 @@
     <Compile Include="Building_AE.cs" />
     <Compile Include="Building_AEBed.cs" />
     <Compile Include="CompProperties\CompProperties_MeatGrinder.cs" />
+    <Compile Include="CompProperties\CompProperties_BakingPies.cs" />
     <Compile Include="CompProperties\CompProperties_UseEffectReplaceHediff.cs" />
     <Compile Include="Comp\CompAEStudyUnlocks.cs" />
     <Compile Include="CompProperties\CompProperties_AnomalyHospitalBed.cs" />
     <Compile Include="CompProperties\CompProperties_AnomalyBed.cs" />
     <Compile Include="Comp\CompStudiableAE.cs" />
+    <Compile Include="Comp\Comp_BakingPies.cs" />
     <Compile Include="Comp\Comp_MeatGrinder.cs" />
     <Compile Include="Comp\Comp_ForbiddenFruit.cs" />
     <Compile Include="Comp\Comp_AnomalyHospitalBed.cs" />
