--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -50,6 +50,7 @@
     <Compile Include="AEMod.cs" />
     <Compile Include="AESettings.cs" />
     <Compile Include="JobDriver\JobDriver_RemoveAnomaly.cs" />
+    <Compile Include="Structures\BloodLakeSummonPatternStage.cs" />
     <Compile Include="Structures\BloodLakeSummonPattern.cs" />
     <Compile Include="Structures\BloodLakeSummonHistory.cs" />
     <Compile Include="Verb_AEPowerBeam.cs" />
