Added underground spawn incident Change incident for Puddle and Lake to from underground Added spawner for Puddle and Lake Change Patter to Patter with stages Temp Study Noted for Puddle and Lake

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -49,6 +49,7 @@
     <Compile Include="AEPowerBeam.cs" />
     <Compile Include="AEMod.cs" />
     <Compile Include="AESettings.cs" />
+    <Compile Include="IncidentWorker\IncidentWorker_DeployFromUnderground.cs" />
     <Compile Include="JobDriver\JobDriver_RemoveAnomaly.cs" />
     <Compile Include="Structures\BloodLakeSummonPatternStage.cs" />
     <Compile Include="Structures\BloodLakeSummonPattern.cs" />
