--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Building\Building_AEBloodLakeExit.cs" />
     <Compile Include="Building\Building_AEBloodLake.cs" />
     <Compile Include="Building\Building_AEMapPortal.cs" />
+    <Compile Include="CompProperties\CompProperties_AEStudyUnlocks.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeTerrain.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFleshbeasts.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFleshmassSpitter.cs" />
