--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -44,7 +44,10 @@
     <Compile Include="Building\Building_AEBloodLake.cs" />
     <Compile Include="Building\Building_AEMapPortal.cs" />
     <Compile Include="CompProperties\CompProperties_AEStudyUnlocks.cs" />
+    <Compile Include="CompProperties\CompProperties_DogTag.cs" />
     <Compile Include="Comp\Comp_BloodLakeTerminal.cs" />
+    <Compile Include="Comp\Comp_DogTag.cs" />
+    <Compile Include="GenStep\GenStep_BloodLakeFindDogTag.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFleshmassUNest.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFindTerminal.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeTerrain.cs" />
