--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -44,8 +44,12 @@
     <Compile Include="Building\Building_AEBloodLake.cs" />
     <Compile Include="Building\Building_AEMapPortal.cs" />
     <Compile Include="CompProperties\CompProperties_AEStudyUnlocks.cs" />
+    <Compile Include="CompProperties\CompProperties_BloodSource.cs" />
+    <Compile Include="CompProperties\CompProperties_BloodPump.cs" />
     <Compile Include="CompProperties\CompProperties_DogTag.cs" />
     <Compile Include="Comp\Comp_BloodLakeTerminal.cs" />
+    <Compile Include="Comp\Comp_BloodSource.cs" />
+    <Compile Include="Comp\Comp_BloodPump.cs" />
     <Compile Include="Comp\Comp_DogTag.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFindDogTag.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFleshmassUNest.cs" />
@@ -55,7 +59,7 @@
     <Compile Include="GenStep\GenStep_BloodLakeFleshmassSpitter.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFindExit.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFleshSacks.cs" />
-    <Compile Include="AEStudyNote.cs" />
+    <Compile Include="Structures\AEStudyNote.cs" />
     <Compile Include="CompProperties\CompProperties_CanDestroyedAfterStudy.cs" />
     <Compile Include="CompProperties\CompProperties_UseEffecRemoveHediff.cs" />
     <Compile Include="Comp\CompUseEffect_RemoveHediff.cs" />
@@ -67,12 +71,13 @@
     <Compile Include="AESettings.cs" />
     <Compile Include="IncidentWorker\IncidentWorker_DeployFromUnderground.cs" />
     <Compile Include="JobDriver\JobDriver_RemoveAnomaly.cs" />
+    <Compile Include="PlaceWorker\PlaceWorker_ShowBloodPumpConnection.cs" />
     <Compile Include="Structures\BloodLakeSummonPatternStage.cs" />
     <Compile Include="Structures\BloodLakeSummonPattern.cs" />
     <Compile Include="Structures\BloodLakeSummonHistory.cs" />
     <Compile Include="DamageWorker_AddInjuryFleshmass.cs" />
     <Compile Include="Verb_AEPowerBeam.cs" />
-    <Compile Include="PlaceWorker_ShowBeamTargetRadius.cs" />
+    <Compile Include="PlaceWorker\PlaceWorker_ShowBeamTargetRadius.cs" />
     <Compile Include="MinifiedThing_AE.cs" />
     <Compile Include="Building\Building_AE.cs" />
     <Compile Include="Building\Building_AEBed.cs" />
