--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -37,6 +37,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompProperties\CompProperties_UseEffectBloodLiquidInjector.cs" />
+    <Compile Include="Comp\CompApplyUsableTo.cs" />
+    <Compile Include="Comp\CompTargetable_SinglePawnUseFirstEffect.cs" />
     <Compile Include="BloodLakeMapComponent.cs" />
     <Compile Include="Building\AE_BloodLakeExtension.cs" />
     <Compile Include="Building\Building_AEBloodPuddle.cs" />
@@ -46,7 +49,9 @@
     <Compile Include="CompProperties\CompProperties_AEStudyUnlocks.cs" />
     <Compile Include="CompProperties\CompProperties_BloodSource.cs" />
     <Compile Include="CompProperties\CompProperties_BloodPump.cs" />
+    <Compile Include="CompProperties\CompProperties_ApplyUsableTo.cs" />
     <Compile Include="CompProperties\CompProperties_DogTag.cs" />
+    <Compile Include="Comp\CompUseEffect_BloodLiquidInjector.cs" />
     <Compile Include="Comp\Comp_BloodLakeTerminal.cs" />
     <Compile Include="Comp\Comp_BloodSource.cs" />
     <Compile Include="Comp\Comp_BloodPump.cs" />
@@ -59,6 +64,7 @@
     <Compile Include="GenStep\GenStep_BloodLakeFleshmassSpitter.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFindExit.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFleshSacks.cs" />
+    <Compile Include="JobDriver\JobDriver_ApplyUsableTo.cs" />
     <Compile Include="Structures\AEStudyNote.cs" />
     <Compile Include="CompProperties\CompProperties_CanDestroyedAfterStudy.cs" />
     <Compile Include="CompProperties\CompProperties_UseEffecRemoveHediff.cs" />
