Study Notes research projects now hidded till study note

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HarmonyPatches.cs" />
     <Compile Include="CompProperties\CompProperties_AbilityFleshbeastCommand.cs" />
     <Compile Include="CompProperties\CompProperties_AbilitySpawnFleshbeast.cs" />
     <Compile Include="CompProperties\CompProperties_AbilitySpewLiquid.cs" />
