Added custom Fleshmass Stomach, Lung and Organogenesis Core Hediff no longer relly on exisitng AddedMutationBase Command ability Gizmo react to enemies no longer showing when not drafted

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -37,6 +37,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompProperties\CompProperties_AbilityFleshmassStomach.cs" />
+    <Compile Include="Comp\CompAbilityEffect_FleshmassStomach.cs" />
+    <Compile Include="Comp\HediffComp_FleshmassRestoration.cs" />
+    <Compile Include="DefOfLocal\BodyPartDefOfLocal.cs" />
     <Compile Include="HarmonyPatches.cs" />
     <Compile Include="CompProperties\CompProperties_AbilityFleshbeastCommand.cs" />
     <Compile Include="CompProperties\CompProperties_AbilitySpawnFleshbeast.cs" />
