--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -38,7 +38,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompProperties\CompProperties_AbilityFleshmassStomach.cs" />
+    <Compile Include="CompProperties\CompProperties_StudyNotepad.cs" />
     <Compile Include="Comp\CompAbilityEffect_FleshmassStomach.cs" />
+    <Compile Include="Comp\Comp_StudyNotepad.cs" />
     <Compile Include="Comp\HediffComp_FleshmassRestoration.cs" />
     <Compile Include="DefOfLocal\BodyPartDefOfLocal.cs" />
     <Compile Include="HarmonyPatches.cs" />
