ChristmasStockings spawn Tree after destruction on last gift Fixed description for things not getting updated

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ThingWithComps_AE.cs" />
     <Compile Include="CompProperties\CompProperties_AbilityFleshmassStomach.cs" />
     <Compile Include="CompProperties\CompProperties_ChristmasStockings.cs" />
     <Compile Include="CompProperties\CompProperties_StudyNotepad.cs" />
