Changed text lines for CTree CTree can create a subMap once a year Improve Alert for CTree subMap CTree subMap self destroy after 5 days Temp Temprature drop condition added

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Building\Building_AEChristmasTreeExit.cs" />
     <Compile Include="ChristmasTreeMapComponent.cs" />
     <Compile Include="Building\Building_AEBloodLake.cs" />
+    <Compile Include="GameCondition_AETemperatureDrop.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeGiftBoxes.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeTerrain.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeFindExit.cs" />
