Freezing dmg scale of ComfyTempMin of Pawn instead of armor category SnowMan decrease combatPower Moved cs files to folders

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -40,15 +40,17 @@
     <Compile Include="Alert_ChristmasTreeUnstable.cs" />
     <Compile Include="Building\Building_AEChristmasGiftBox.cs" />
     <Compile Include="Building\Building_AEChristmasTreeExit.cs" />
-    <Compile Include="ChristmasTreeMapComponent.cs" />
+    <Compile Include="MapComponent\ChristmasTreeMapComponent.cs" />
     <Compile Include="Building\Building_AEBloodLake.cs" />
     <Compile Include="Comp\Comp_EntityWithWeapon.cs" />
-    <Compile Include="GameCondition_AETemperatureDrop.cs" />
+    <Compile Include="DamageWorker\DamageWorker_Freezing.cs" />
+    <Compile Include="DefModExtension\AE_DamageDefExtension.cs" />
+    <Compile Include="GameCondition\GameCondition_AETemperatureDrop.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeSnowMan.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeGiftBoxes.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeTerrain.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeFindExit.cs" />
-    <Compile Include="ThingWithComps_AE.cs" />
+    <Compile Include="Thing\ThingWithComps_AE.cs" />
     <Compile Include="CompProperties\CompProperties_AbilityFleshmassStomach.cs" />
     <Compile Include="CompProperties\CompProperties_ChristmasStockings.cs" />
     <Compile Include="CompProperties\CompProperties_StudyNotepad.cs" />
@@ -72,8 +74,8 @@
     <Compile Include="Comp\CompAbilityEffect_FleshbeastCommand.cs" />
     <Compile Include="Comp\CompApplyUsableTo.cs" />
     <Compile Include="Comp\CompTargetable_SinglePawnUseFirstEffect.cs" />
-    <Compile Include="BloodLakeMapComponent.cs" />
-    <Compile Include="Building\AE_BloodLakeExtension.cs" />
+    <Compile Include="MapComponent\BloodLakeMapComponent.cs" />
+    <Compile Include="DefModExtension\AE_BloodLakeExtension.cs" />
     <Compile Include="Building\Building_AEBloodPuddle.cs" />
     <Compile Include="Building\Building_AEBloodLakeExit.cs" />
     <Compile Include="Building\Building_AEChristmasTree.cs" />
@@ -94,7 +96,7 @@
     <Compile Include="Comp\Comp_BloodSource.cs" />
     <Compile Include="Comp\Comp_BloodPump.cs" />
     <Compile Include="Comp\Comp_DogTag.cs" />
-    <Compile Include="DamageWorker_PsychicFlash.cs" />
+    <Compile Include="DamageWorker\DamageWorker_PsychicFlash.cs" />
     <Compile Include="DefOfLocal\GameConditionDefOfLocal.cs" />
     <Compile Include="DefOfLocal\IncidentDefOfLocal.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFindDogTag.cs" />
@@ -106,7 +108,7 @@
     <Compile Include="GenStep\GenStep_BloodLakeFindExit.cs" />
     <Compile Include="GenStep\GenStep_BloodLakeFleshSacks.cs" />
     <Compile Include="JobDriver\JobDriver_ApplyUsableTo.cs" />
-    <Compile Include="GameCondition_AEBloodFog.cs" />
+    <Compile Include="GameCondition\GameCondition_AEBloodFog.cs" />
     <Compile Include="Hediff_GroupedLevel.cs" />
     <Compile Include="PsychicRitual\PsychicRitualDef_AEAskingProvider.cs" />
     <Compile Include="PsychicRitual\PsychicRitualToil_AEAskingProvider.cs" />
@@ -120,7 +122,7 @@
     <Compile Include="Comp\Comp_CanDestroyedAfterStudy.cs" />
     <Compile Include="DefOfLocal\SoundDefOfLocal.cs" />
     <Compile Include="DefOfLocal\ThingDefOfLocal.cs" />
-    <Compile Include="AEPowerBeam.cs" />
+    <Compile Include="Thing\AEPowerBeam.cs" />
     <Compile Include="AEMod.cs" />
     <Compile Include="AESettings.cs" />
     <Compile Include="IncidentWorker\IncidentWorker_DeployFromUnderground.cs" />
@@ -129,10 +131,10 @@
     <Compile Include="Structures\BloodLakeSummonPatternStage.cs" />
     <Compile Include="Structures\BloodLakeSummonPattern.cs" />
     <Compile Include="Structures\BloodLakeSummonHistory.cs" />
-    <Compile Include="DamageWorker_AddInjuryFleshmass.cs" />
+    <Compile Include="DamageWorker\DamageWorker_AddInjuryFleshmass.cs" />
     <Compile Include="Verb_AEPowerBeam.cs" />
     <Compile Include="PlaceWorker\PlaceWorker_ShowBeamTargetRadius.cs" />
-    <Compile Include="MinifiedThing_AE.cs" />
+    <Compile Include="Thing\MinifiedThing_AE.cs" />
     <Compile Include="Building\Building_AE.cs" />
     <Compile Include="Building\Building_AEBed.cs" />
     <Compile Include="CompProperties\CompProperties_BeamTarget.cs" />
